--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,8 @@
       content="Web site created using create-react-app"
     />
     <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
-    <title>React App</title>
+     <link rel="shortcut icon" href="https://res.cloudinary.com/vanshstorage/image/upload/v1730193683/goala_tgga0y.svg" type="image/x-icon">
+    <title>Goala Foods</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
